fluxcd/infrastructure/configs/overlays/production/cilium-policies/hyrule-castle/cnp-apt-cacher-ng.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-apt-cacher-ng-lan
spec:
  description: >-
    Allow LAN clients to reach apt-cacher-ng on 3142/TCP. LB IP
    172.22.30.122 (sharing-key: compass). LAN-only, no internet.
  enableDefaultDeny:
    ingress: false
    egress: false
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: apt-cacher-ng
  ingress:
    - fromCIDRSet:
        - cidr: "10.0.0.0/8"
        - cidr: "172.16.0.0/12"
          except: ["172.22.144.0/24"]
        - cidr: "192.168.0.0/16"
          except: ["192.168.144.0/20"]
      toPorts:
        - ports:
            - port: "3142"
              protocol: TCP
